[package]
name = "vrrm"
version = "0.1.0"
authors = ["strinsberg"]
description = "A simple byte code virtual machine and assembler"
edition = "2021"
repository = "https://github.com/strinsberg/vrrm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
